--- a/kizuki-no-niwa/app.json
+++ b/kizuki-no-niwa/app.json
@@ -23,7 +23,14 @@
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "bundler": "metro",
+      "themeColor": "#2D2D2D",
+      "backgroundColor": "#F5F5F0",
+      "display": "standalone",
+      "scope": "/",
+      "startUrl": "/",
+      "description": "A garden for your thoughts."
     },
     "plugins": [
       "expo-router",
@@ -33,9 +40,9 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#F5F5F0",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#1c1c1e"
           }
         }
       ],
