--- a/kizuki-no-niwa/package.json
+++ b/kizuki-no-niwa/package.json
@@ -58,5 +58,8 @@
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.3.3"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "private": true
 }
