--- a/kizuki-no-niwa/app.json
+++ b/kizuki-no-niwa/app.json
@@ -22,7 +22,7 @@
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "output": "static",
+      "output": "single",
       "favicon": "./assets/images/favicon.png",
       "bundler": "metro",
       "themeColor": "#2D2D2D",
