--- a/kizuki-no-niwa/package.json
+++ b/kizuki-no-niwa/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.95.3",
     "@tanstack/react-query": "^5.90.21",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "dotenv": "^17.3.1",
     "expo": "~52.0.28",
     "expo-av": "~15.0.1",
