--- a/kizuki-no-niwa/vercel.json
+++ b/kizuki-no-niwa/vercel.json
@@ -1,22 +1,10 @@
 {
     "version": 2,
     "name": "kizuki-no-niwa",
-    "builds": [
+    "rewrites": [
         {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "handle": "filesystem"
-        },
-        {
-            "src": "/.*",
-            "dest": "/index.html"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
