chore: set vercel outputDirectory to dist

--- a/kizuki-no-niwa/vercel.json
+++ b/kizuki-no-niwa/vercel.json
@@ -1,6 +1,7 @@
 {
     "version": 2,
     "name": "kizuki-no-niwa",
+    "outputDirectory": "dist",
     "rewrites": [
         {
             "source": "/(.*)",
