--- a/kizuki-no-niwa/package.json
+++ b/kizuki-no-niwa/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "build": "npx expo export --platform web",
+    "test": "jest --watchAll",
+    "build": "npx expo export --platform web && node scripts/inject-manifest.js",
     "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo-google-fonts/noto-sans-jp": "^0.4.3",
