--- a/kizuki-no-niwa/public/manifest.json
+++ b/kizuki-no-niwa/public/manifest.json
@@ -3,6 +3,11 @@
     "name": "Kizuki no Niwa",
     "icons": [
         {
+            "src": "/icons/icon-192.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
             "src": "/icons/icon-512.png",
             "type": "image/png",
             "sizes": "512x512"
